[package]
name = "abstract_chearmyp_source"
version = "0.5.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[features]
default = []
no_std = []
str_source = []
str_comparable_to_u8 = []
str_comparable_to_str = []
slice_u8_source = []
slice_u8_comparable_to_u8 = []
slice_u8_comparable_to_str = []
vec_source_collection = []
